    - AST_rt_monitor_log_report.php: Modified to use screen colors.
    - NANPA_running_processes.php: Added screen color settings.
    - admin_NANPA_updater.php: Added screen color settings.
    - callbacks_bulk_change.php: Added screen color settings.
    - vicidial_custom_reports_admin.php: Added screen colors; Fixed delete bug.
  * Fix width of SendMail window.

2.25.6

  [Jörg Frings-Fürst]
  * Add Ticket-Mail
    - Add field ticket_mail to system_settings
    - Add link "Ticket Mail" to agent screen
    - New File SendMail.php
  * Release 2.25.6 2017-08-16

2.25.5

  [Jörg Frings-Fürst]
  * Correct typos
  * Format output of changelog.php
  * Add upstream Rev. 2800:
    - Added more qualifiers for Hungup Xfer function to be triggered.
    - Added detailed log option.
    - Added park log.
  * Add upstream Rev. 2801:
    - NOTE: For Asterisk 1.4, use a pipe instead of a comma in the Park Call AGI IVR field.
    - Added rolling of user_call_log if over 1000000 records.
    - Fix for Cross-Cluster phones where phone_type has "trunk" in it.
    - Added phone and province to detail output, fixed ASCII display issues.
  * Add new fields Custom 1 - 5 to lists.
  * Add upstream Rev. 2802:
    + Some changes at www/vicidial/fcstats_detail.php.
  * Release 2.25.5 2017-08-14

2.25.4

  [Jörg Frings-Fürst]
  * Add upstream Rev. 2794:
    - Fix for empty agent_choose_territories value
  * Add upstraem Rev. 2795:
    - Added more debug and '8days' date option
  * Add upstream Rev. 2796:
    - Some report changes.
  * Remove useless *.orig files
  * Add upstream Rev. 2797:
    - Added vicidial_campaign_hour_counts and vicidial_carrier_hour_counts rolling
  * Add upstream Rev. 2798:
    - Added AST_agent_wait_check.pl script to send out emails if there are agents
      waiting more than X seconds.
  * Add upstream Rev. 2799:
    - Correct some typos.
  * Add EU_DOT_24HR.
  * Add vicidial.php to display changelog
  * Release 2.25.4 2017-08-04

2.25.3

  [ Jörg Frings-Fürst ]